--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>mimobr</display-name>
+  <display-name>Mimobr</display-name>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <display-name>ServletForm</display-name>
+    <servlet-name>ServletForm</servlet-name>
+    <servlet-class>com.mimobr.servlet.ServletForm</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ServletForm</servlet-name>
+    <url-pattern>/ServletForm</url-pattern>
+  </servlet-mapping>
 </web-app>
