--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 	    <version>3.0.1</version>
 	    <scope>provided</scope>
 	</dependency>
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.6</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
